# hft-lab

./: .gitignore  LICENSE  README.md
nbbo_pipeline/: CMakeLists.txt
nbbo_pipeline/config/: hist_bins_default.json  strategy_params.json
nbbo_pipeline/include/nbbo/: arrow_utils.hpp  backtester.hpp  build_events_config.hpp  event_table_builder.hpp  event_types.hpp  event_writer.hpp  histogram_bins.hpp  histogram_builder.hpp  histogram_model.hpp  schema.hpp  time_utils.hpp  timing.hpp
nbbo_pipeline/scripts/: build.sh  build_denoise.sh  run_backtester.sh  run_build_events.sh  run_build_histogram.sh  run_clock.sh  run_clock_winsor.sh  run_denoise.sh  run_event.sh  run_event_winsor.sh  run_summarize_trades.sh
nbbo_pipeline/src/: backtester.cpp  build_events.cpp  build_histogram.cpp  clean_mid_spikes.cpp  event_table_builder.cpp  histogram_bins.cpp  histogram_builder.cpp  histogram_model.cpp  nbbo.backtester.cppm  nbbo_pipeline.cpp  pnl_aggregator.cpp  run_backtester.cpp  strategy_config.cpp  summarize_trades.cpp  timing.cpp
